[package]
name = "paladin-lockup-program"
version = "0.1.0"
description = "Paladin Lockup Program"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0.2"
spl-program-error = "0.5.0"

[dev-dependencies]

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "Dbf7u6x15DhjMrBMunY3XoRWdByrCCt2dbyoPrCXN6SQ"
