[package]
name = "paladin-lockup-program"
version = "0.1.0"
description = "Paladin Lockup Program"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
solana-program = "2.0.2"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-discriminator = "0.3.0"
spl-program-error = "0.5.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "Dbf7u6x15DhjMrBMunY3XoRWdByrCCt2dbyoPrCXN6SQ"
