[package]
name = "paladin-lockup-program"
version = "0.0.1"
description = "Paladin Lockup Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2"
shank = "0.4.2"
solana-program = "2.1.4"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-discriminator = "0.3.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.1.4"
solana-sdk = "2.1.4"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "4m9UhNYPXDHmBJ6qfn6zBjtA8xiKwz1w8Jd7TQ1Ref7e"
